参考文献格式

--- a/NKThesis.cfg
+++ b/NKThesis.cfg
@@ -1,6 +1,8 @@
 
 
-\tocdepth{2}
+\tocdepth{3}
+\renewcommand*\l@section{\@dottedtocline{1}{1em}{3.5em}}
+\renewcommand*\l@subsection{\@dottedtocline{1}{2em}{2.5em}}
 \def\NKT@lunwenleibie{论文类别}
 \newcommand{\proof}[1][\NKT@proof]{\par\textbf{#1.}\,\, }
 \def\endproof{\hfill{\usefont{U}{msa}{m}{n}\char"03}}
@@ -10,7 +12,7 @@
   \vspace*{24pt}
   \centerline{\zihaoxiaoer\rmfamily\bfseries\jiacu 摘要}
   \addcontentsline{toc}{chapter}{\protect\numberline{摘要}{}}
-  \markboth{摘要}{摘要} 
+  \markboth{摘要}{摘要}
   \vspace*{18pt}
   \fontsize{12}{20}\selectfont}
 \let\endzhaiyao\relax
@@ -19,16 +21,16 @@
   \clearpage
   \vspace*{24pt}
   \centerline{\zihaoxiaoer\usefont{OT1}{phv}{bx}{n}Abstract}
-  \addcontentsline{toc}{chapter}{\protect\numberline{Abstract}{}}  
+  \addcontentsline{toc}{chapter}{\protect\numberline{Abstract}{}}
   \markboth{Abstract}{Abstract}
   \vspace*{18pt}
   \fontsize{12}{20}\selectfont}
 \let\endabstract\relax
 
-\long\def\guanjianci{\par{\rmfamily\jiacu 关键词：}}
+\long\def\guanjianci{\par{\noindent\rmfamily\jiacu 关键词：}}
 \let\endguanjianci\relax
 
-\long\def\keywords{\par{\rmfamily\bfseries Key Words: }}
+\long\def\keywords{\par{\noindent\rmfamily\bfseries Key Words: }}
 \let\endkeywords\relax
 
 
@@ -42,30 +44,21 @@
 学位论文原创性声明的法律责任由本人承担。}
 
 \long\def\NKT@authorization{
-根据《南开大学关于研究生学位论文收藏和利用管理办法》，我校的博士、硕士学位
-获得者均须向南开大学提交本人的学位论文纸质本及相应电子版。
+本人完全了解《南开大学关于研究生学位论文收藏和利用管理办法》关于南开大学(简称“学校”)研究生学位论文收藏和利用的管理规定，同意向南开大学提交本人的学位论文电子版及相应的纸质本。
 
-本人完全了解南开大学有关研究生学位论文收藏和利用的管理规定。南开大学拥有在
-《著作权法》规定范围内的学位论文使用权，即：(1)学位获得者必须按规定提交学位论文
-(包括纸质印刷本及电子版)，学校可以采用影印、缩印或其他复制手段保存研究生学位论
-文，并编入《南开大学博硕士学位论文全文数据库》；(2)为教学和科研目的，学校可以将
-公开的学位论文作为资料在图书馆等场所提供校内师生阅读，在校园网上提供论文目录检
-索、文摘以及论文全文浏览、下载等免费信息服务；(3)根据教育部有关规定，南开大学向
-教育部指定单位提交公开的学位论文；(4)学位论文作者授权学校向中国科技信息研究所和
-中国学术期刊(光盘)电子出版社提交规定范围的学位论文及其电子版并收入相应学位论文
-数据库，通过其相关网站对外进行信息服务。同时本人保留在其他媒体发表论文的权利。
+本人了解南开大学拥有在《中华人民共和国著作权法》规定范围内的学位论文使用权，同意在以下几方面向学校授权。即：
 
+1.学校将学位论文编入《南开大学博硕士学位论文全文数据库》，并作为资料在学校图书馆等场所提供阅览，在校园网上提供论文目录检索、文摘及前16页的浏览等信息服务；
 
-非公开学位论文，保密期限内不向外提交和提供服务，
-解密后提交和服务同公开论文。
+2.学校可以采用影印、缩印或其他复制手段保存学位论文；学校根据规定向教育部指定的收藏和存档单位提交学位论文；
 
-论文电子版提交至校图书馆网站：http://202.113.20.161:8001/index.htm。
+3.非公开学位论文在解密后的使用权同公开论文。
 
-本人承诺：本人的学位论文是在南开大学学习期间创作完成的作品，并已通过论文答
-辩；提交的学位论文电子版与纸质本论文的内容一致，如因不同造成不良后果由本人自负。
- 
-本人同意遵守上述规定。本授权书签署一式两份，由研究生院和图书馆留存。}
- 
+本人承诺：本人的学位论文是在南开大学学习期间创作完成的作品，并已通过论文答辩；提交的学位论文电子版与纸质本论文的内容一致，如因不同造成不良后果由本人自负。
+
+本人签署本授权书一份（此授权书为论文中一页），交图书馆留存。
+}
+
 
 \long\def\NKTtitlepage{
   \clearpage
@@ -83,8 +76,8 @@
   \hskip 53mm\hbox{\includegraphics[viewport=0 0 2984 969,width=40mm]{nankaidaxue.pdf}}
   \vskip -10mm
   \begin{center}
-  {\def\CJKglue{\hskip 0.5em}\zihaoer\jiacu 
-     \ifx\NKT@key@lunwenleibie\NKT@string@boshi 
+  {\def\CJKglue{\hskip 0.5em}\zihaoer\jiacu
+     \ifx\NKT@key@lunwenleibie\NKT@string@boshi
        博士学位论文%
      \else
        硕士学位论文%
@@ -106,11 +99,11 @@
   \def\arraystretch{2}
   \tabcolsep 0.1em
   \begin{tabular}{lcl}
-  \NKT@tp@item{论文作者}{lunwenzuozhe}  & \hbox to 10mm{} & \NKT@tp@item{指导教师}{zhidaojiaoshi}  \\
-  \NKT@tp@item{申请学位}{shenqingxuewei}&                 & \NKT@tp@item{培养单位}{peiyangdanwei}  \\
-  \NKT@tp@item{学科专业}{xuekezhuanye}  &                 & \NKT@tp@item{研究方向}{yanjiufangxiang}\\
-  答辩委员会主席 \hskip 0.5em\underline{\hbox to 24mm{}} 
-  & &评\hskip 0.5em 阅\hskip 0.5em人\hskip 0.5em\underline{\hbox to 40mm{}}     
+  \NKT@tp@itemv{论文作者}{lunwenzuozhe}  & \hbox to 5mm{} & \NKT@tp@item{指导教师}{\NKT@keyvalue{zhidaojiaoshi}{\hskip 1em \NKT@keyvalue{zhidaojiaoshizhicheng}}}  \\
+  \NKT@tp@itemv{申请学位}{shenqingxuewei}&                 & \NKT@tp@itemv{培养单位}{peiyangdanwei}  \\
+  \NKT@tp@itemv{学科专业}{xuekezhuanye}  &                 & \NKT@tp@itemv{研究方向}{yanjiufangxiang}\\
+  答辩委员会主席 \hskip 0.5em\underline{\hbox to 34mm{}}
+  & &评\hskip 0.5em 阅\hskip 0.5em人\hskip 0.5em\underline{\hbox to 50mm{}}
  \end{tabular}
 
   \vskip 10mm
@@ -122,10 +115,15 @@
   \end{center}
   \egroup}
 
+
+\def\NKT@tp@itemv#1#2{%
+  \NKT@tp@item{#1}{\NKT@keyvalue{#2}}}
+
 \def\NKT@tp@item#1#2{%
   #1%
   \hskip 0.5em%
-  \underline{\hbox to 40mm{\hfil\NKT@keyvalue{#2}\hfil}}}
+  \underline{\hbox to 50mm{\hfil#2\hfil}}}
+
 
 \long\def\NKTdeclaration{
   \clearpage
@@ -148,6 +146,7 @@
 
   \vskip 5mm
   \centerline{\heiti\zihaosan 非公开学位论文标注说明}
+  \centerline{\kaiti\zihaoxiaosi (本页表中填写内容须打印)}
 
   根据南开大学有关规定，非公开学位论文须经指导教师同意、作者本人申
   请和相关部门批准方能标注。未经批准的均为公开学位论文，公开学位论文本
@@ -177,17 +176,19 @@
 
   \vskip .5em
   \fontsize{12}{24}\selectfont
-  \hfill {\heiti 南开大学学位办公室盖章(有效)\hskip 0.5em}
+  \hfill {\heiti 南开大学学位评定委员会办公室盖章(有效)\hskip 0.5em}
 
   \vskip 10mm
-  \parindent 8em
-  \def\arraystretch{2}
+  % \parindent 8em
+  % \def\arraystretch{2}
   \zihaowu
-  \begin{tabular}{lrclcl}
-  限制★ &2 年（最长& 2 &年， 可少于& 2 &年）\\
-  秘密★ &10 年（最长& 5 & 年，可少于& 5 &年）\\
-  机密★ &20 年（最长& 10 &年，可少于&10 &年）\\
-  \end{tabular}
+  \noindent
+  注：限制$\bigstar$2年(可少于2年);秘密$\bigstar$10年(可少于10年);机密$\bigstar$20年(可少于20年)
+  % \begin{tabular}{lrclcl}
+  % 限制$\bigstar$ &2 年（最长& 2 &年， 可少于& 2 &年）\\
+  % 秘密$\bigstar$ &10 年（最长& 5 & 年，可少于& 5 &年）\\
+  % 机密$\bigstar$ &20 年（最长& 10 &年，可少于&10 &年）\\
+  % \end{tabular}
   \egroup}
 
 \long\def\NKTauthorization{
@@ -199,9 +200,10 @@
   \parindent 2em
   \NKT@authorization
 
-  \hfill 作者暨授权人签字：\underline{\hbox to 30mm{}}\hbox to 4em{}
+  \vskip 10mm
+  \hfill 学位论文作者暨授权人(亲笔)签字：\underline{\hbox to 30mm{}}\hbox to 2em{}
 
-  \hfill 20\qquad  年\qquad 月\qquad  日 \hbox to 2.6em{}
+  \hfill 20\qquad  年\qquad 月\qquad  日 \hbox to 1.6em{}
 
   \vskip 5mm
 
@@ -209,12 +211,13 @@
 
   \fontsize{10.5}{10.5}\selectfont
   \def\NKT@au@item##1##2{%
-    ##1%
+    {\hskip .5em ##1 \hskip .5em }%
     \edef\NKT@temp{\csname NKT@string@##2\endcsname}%
+    % https://tex.stackexchange.com/questions/16000/creating-boxed-check-mark
     \ifx\NKT@key@lunwenleibie\NKT@temp
-      ■%
+      \makebox[0pt][l]{$\square$}\raisebox{.15ex}{\hspace{0.1em}$\checkmark$}%
     \else
-      □%
+      \makebox[10pt][l]{$\square$}\raisebox{.15ex}%
     \fi}
   \hbox to 140mm{%
   \def\arraystretch{1.8}
@@ -239,29 +242,31 @@
   \NKT@au@item{高校教师}{gaoxiaojiaoshi}\quad
   \NKT@au@item{同等学力硕士}{tongdengxuelishuoshi}\hss}\\
   \hline
-  \hbox to 22mm{\hss 院\hfil /\hfil 系\hfil /\hfil 所\hss}\vrule
+  \hbox to 22mm{\hss 学院（单位）\hss}\vrule
   \hbox to 47mm{\hss\NKT@keyvalue{yuanxisuo}\hss}\vrule
-  \hbox to 16.5mm{\hss 专\hskip 1.5em 业\hss}\vrule
-  \hbox to 69mm{\hss\NKT@keyvalue{zhuanye}\hss}\\
+  \hbox to 46.5mm{\hss 学科/专业(专业学位)名称\hss}\vrule
+  \hbox to 49mm{\hss\NKT@keyvalue{zhuanye}\hss}\\
   \hline
   \hbox to 22mm{\def\CJKglue{\hskip .5em}\hss 联系电话\hss}\vrule
   \hbox to 47mm{\hss\NKT@keyvalue{lianxidianhua}\hss}\vrule
-  \hbox to 16.5mm{\hss{\bfseries Email}\hss}\vrule
+  \hbox to 16.5mm{\hss{电子邮箱}\hss}\vrule
   \hbox to 69mm{\hss\NKT@keyvalue{Email}\hss}\\
   \hline
   \,通讯地址(邮编)：\NKT@keyvalue{tongxundizhi}\\
   \hline
-  \,备注：\NKT@keyvalue{beizhu}\\
+  % \,备注\NKT@keyvalue{beizhu}\\
+  \hbox to 28mm{\hss 非公开论文编号\hss}\vrule
+  \hbox to 47mm{\hss\NKT@keyvalue{feigongkailunwenbianhao}\hss}\vrule
+  \hbox to 16.5mm{\hss{备注}\hss}\vrule
+  \hbox to 69mm{\hss\NKT@keyvalue{beizhu}\hss}\\
   \hline
   \end{tabular}\hss}
 
-  \hbox to 140mm{%
-  \fontsize{10.5}{10.5}\selectfont 
+  \hbox to 165mm{%
+  \fontsize{9}{11}\selectfont
   \def\arraystretch{1.8}
   \tabcolsep 0pt
   \hskip -8mm
-  \bfseries
-  \begin{tabular}{ll}
-   注：&本授权书适用我校授予的所有博士、硕士的学位论文。由作者填写(一式两份)签字后交校图书\\
-       &馆，非公开学位论文须附《南开大学研究生申请非公开学位论文审批表》。
+  \begin{tabular}{p{5mm} p{160mm}}
+  注：& 本授权书适用我校授予的所有博士、硕士的学位论文。如已批准为非公开学位论文，须向图书馆提供批准通过的《南开大学研究生申请非公开学位论文审批表》复印件和“非公开学位论文标注说明”页原件。
   \end{tabular}\hss}}
