授权书细节修改

--- a/NKThesis.cfg
+++ b/NKThesis.cfg
@@ -165,7 +165,7 @@
   \vbox to 10mm{\vskip 4mm\hbox to 31mm{\hfil\heiti 论文题目\hfil}\vss}
     &\hbox to 121mm{}\\
   \hline
-  \heiti 申请密级 &\quad □限制(≤2年)\qquad □秘密(≤10 年)\qquad □机密(≤20年)\\
+  \heiti 申请密级 &\quad $\square$限制($\leqslant$2年)\qquad$\square$秘密($\leqslant$10 年)\qquad $\square$机密($\leqslant$20年)\\
   \hline
   \heiti 保密期限 & \qquad 20\hskip 12mm 年\qquad 月 \qquad 日至20 \hskip 12mm 年\qquad 月\qquad 日\\
   \hline
@@ -236,12 +236,18 @@
   \hbox to 38mm{\hss \NKT@keyvalue{dabianriqi}\hss}\hss\\
   \hline
   \hbox to 22mm{\def\CJKglue{\hskip .5em}\hss 论文类别\hss}\vrule
-  \hbox to 133.7mm{\hss\NKT@au@item{博士}{boshi}\quad
-  \NKT@au@item{学历硕士}{xuelishuoshi}\quad
-  \NKT@au@item{硕士专业学位}{shuoshizhuanyexuewei}\quad
-  \NKT@au@item{高校教师}{gaoxiaojiaoshi}\quad
-  \NKT@au@item{同等学力硕士}{tongdengxuelishuoshi}\hss}\\
-  \hline
+  \hbox to 118mm{
+    \hss
+    \NKT@au@item{博士}{boshi}\quad
+    \NKT@au@item{学历硕士}{xuelishuoshi}\quad
+    \NKT@au@item{专业学位硕士}{shuoshizhuanyexuewei}\quad
+    %\NKT@au@item{高校教师}{gaoxiaojiaoshi}\quad
+    \NKT@au@item{同等学力硕士}{tongdengxuelishuoshi}\quad  
+  }
+  \hbox to 15mm{
+    划\makebox[0pt][l]{$\square$}\raisebox{.15ex}{\hspace{0.1em}$\checkmark$}选择\hss
+  }
+  \\\hline
   \hbox to 22mm{\hss 学院（单位）\hss}\vrule
   \hbox to 47mm{\hss\NKT@keyvalue{yuanxisuo}\hss}\vrule
   \hbox to 46.5mm{\hss 学科/专业(专业学位)名称\hss}\vrule
