精简main，预编译

--- a/NKThesis.cfg
+++ b/NKThesis.cfg
@@ -76,13 +76,14 @@
   \hskip 53mm\hbox{\includegraphics[viewport=0 0 2984 969,width=40mm]{nankaidaxue.pdf}}
   \vskip -10mm
   \begin{center}
-  {\def\CJKglue{\hskip 0.5em}\zihaoer\jiacu
+  {
+    \def\CJKglue{\hskip 0.5em}\zihaoer\jiacu
      \ifx\NKT@key@lunwenleibie\NKT@string@boshi
        博士学位论文%
      \else
        硕士学位论文%
-     \fi}
-
+     \fi
+  }
   \vskip 15mm
   \zihaosan
   \baselineskip 30pt
