--- a/NKThesis.cfg
+++ b/NKThesis.cfg
@@ -97,7 +97,7 @@
   \def\arraystretch{2}
   \tabcolsep 0.1em
   \begin{tabular}{lcl}
-  \NKT@tp@itemv{论文作者}{lunwenzuozhe}  & \hbox to 5mm{} & \NKT@tp@item{指导教师}{zhidaojiaoshi}  \\
+  \NKT@tp@itemv{论文作者}{lunwenzuozhe}  & \hbox to 5mm{} & \NKT@tp@itemv{指导教师}{zhidaojiaoshi}  \\
   \NKT@tp@itemv{申请学位}{shenqingxuewei}&                 & \NKT@tp@itemv{培养单位}{peiyangdanwei}  \\
   \NKT@tp@itemv{学科专业}{xuekezhuanye}  &                 & \NKT@tp@itemv{研究方向}{yanjiufangxiang}\\
   答辩委员会主席 \hskip 0.5em\underline{\hbox to 34mm{}}
