--- a/NKThesis.cfg
+++ b/NKThesis.cfg
@@ -99,10 +99,10 @@
   \begin{tabular}{lcl}
   \NKT@tp@itemv{论文作者}{lunwenzuozhe}  & \hbox to 5mm{} & \NKT@tp@itemv{指导教师}{zhidaojiaoshi}  \\
   \NKT@tp@itemv{申请学位}{shenqingxuewei}&                 & \NKT@tp@itemv{培养单位}{peiyangdanwei}  \\
-  \NKT@tp@itemv{学科专业}{xuekezhuanye}  &                 & \NKT@tp@itemv{研究方向}{yanjiufangxiang}\\
-  答辩委员会主席 \hskip 0.5em\underline{\hbox to 34mm{}}
-  & &评\hskip 0.5em 阅\hskip 0.5em人\hskip 0.5em\underline{\hbox to 50mm{}}
- \end{tabular}
+  \NKT@tp@itemv{学科专业}{zhuanye}  &                 & \NKT@tp@itemv{研究方向}{yanjiufangxiang}\\
+  答辩委员会主席 \hskip 0.5em\underline{\hbox to 34mm{\hfil\NKT@keyvalue{dabianzhuxi}\hfil}} 
+  &&\NKT@tp@itemv{评\hskip 0.5em 阅\hskip 0.5em人}{pingyueren}
+\end{tabular}
 
   \vskip 10mm
   \zihaosi\baselineskip 2.2em
