根据新版规范（20200311）进行了少许调整

--- a/NKThesis.cfg
+++ b/NKThesis.cfg
@@ -9,6 +9,7 @@
   \clearpage
   \vspace*{24pt}
   \centerline{\zihaoxiaoer\rmfamily\bfseries\jiacu 摘要}
+  % 若目录中不需列出摘要，请在下行前添加百分号
   \addcontentsline{toc}{chapter}{\protect\numberline{摘要}{}}
   \markboth{摘要}{摘要}
   \vspace*{18pt}
@@ -19,6 +20,7 @@
   \clearpage
   \vspace*{24pt}
   \centerline{\zihaoxiaoer\usefont{OT1}{phv}{bx}{n}Abstract}
+  % 若目录中不需列出摘要，请在下行前添加百分号
   \addcontentsline{toc}{chapter}{\protect\numberline{Abstract}{}}
   \markboth{Abstract}{Abstract}
   \vspace*{18pt}
