--- a/NKTfonts.cfg
+++ b/NKTfonts.cfg
@@ -7,8 +7,8 @@
 
 \ifxetex
   \setmainfont{Times New Roman}
-  \setCJKmainfont[BoldFont={SimHei},ItalicFont={[simkai.ttf]}]{SimSun}
-  \setCJKmonofont{[simfang.ttf]}
+  \setCJKmainfont[BoldFont={SimHei},ItalicFont={KaiTi}]{SimSun}
+  \setCJKmonofont{FangSong}
 \else
   \ifpdf
     \pdfmapline{=gbksong@UGBK@ < stsong.ttf}
