专业学位硕士打勾

--- a/NKThesis.cfg
+++ b/NKThesis.cfg
@@ -240,7 +240,8 @@
     \hss
     \NKT@au@item{博士}{boshi}\quad
     \NKT@au@item{学历硕士}{xuelishuoshi}\quad
-    \NKT@au@item{专业学位硕士}{shuoshizhuanyexuewei}\quad
+    %\NKT@au@item{专业学位硕士}{shuoshizhuanyexuewei}\quad
+    \NKT@au@item{专业学位硕士}{zhuanyexueweishuoshi}\quad
     %\NKT@au@item{高校教师}{gaoxiaojiaoshi}\quad
     \NKT@au@item{同等学力硕士}{tongdengxuelishuoshi}\quad  
   }
