--- a/NKThesis.cfg
+++ b/NKThesis.cfg
@@ -1,6 +1,4 @@
 \tocdepth{3}
-\renewcommand*\l@section{\@dottedtocline{1}{1em}{3.5em}}
-\renewcommand*\l@subsection{\@dottedtocline{1}{2em}{2.5em}}
 \def\NKT@lunwenleibie{论文类别}
 \newcommand{\proof}[1][\NKT@proof]{\par\textbf{#1.}\,\, }
 \def\endproof{\hfill{\usefont{U}{msa}{m}{n}\char"03}}
@@ -80,7 +78,11 @@
      \ifx\NKT@key@lunwenleibie\NKT@string@boshi
        博士学位论文%
      \else
-       硕士学位论文%
+       \ifx\NKT@key@lunwenleibie\NKT@string@zhuanyexueweishuoshi
+        硕士专业学位论文%
+       \else
+        硕士学位论文%
+       \fi
      \fi}
 
   \vskip 15mm
@@ -95,7 +97,7 @@
   }
 
   \vskip 10mm
-  \zihaosi
+  \zihaoxiaosi
   \def\arraystretch{2}
   \tabcolsep 0.1em
   \begin{tabular}{lcl}
