--- a/.github/workflows/compile-latex.yaml
+++ b/.github/workflows/compile-latex.yaml
@@ -25,12 +25,12 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
 
-      # Runs a single command using the runners shell
-      - uses: xu-cheng/latex-action@v3
-        with:
-          root_file: main.tex
-          texlive_version: 2020
-          latexmk_use_xelatex: true
+      # install dependencies
+      - name: install 
+        run: ./init.sh
+
+      - name: build 
+        run: ./build.cmd
 
       - name: Upload PDF file
         uses: actions/upload-artifact@v4
