--- a/.github/workflows/compile-latex.yaml
+++ b/.github/workflows/compile-latex.yaml
@@ -35,4 +35,6 @@ jobs:
       - name: Upload PDF file
         uses: actions/upload-artifact@v4
         with:
+          name: main.pdf
           path: main.pdf
+          compression-level: 0 # pdf is already compressed
