--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -24,8 +24,8 @@ jobs:
       - name: install 
         run: ./init.sh
 
-      - name: build 
+      - name: build tex
         run: ./build.cmd
       
-      - name: upload to release
-        run: 'gh release upload ${{github.event.release.tag_name}} main.pdf#NKThesis.pdf'
+      - name: upload pdf to release
+        run: 'gh release upload ${{ github.ref_name }} main.pdf#NKThesis.pdf'
